formver.compiler-plugin/testData/diagnostics/conversion/types/any.kt
// CONVERSION_ONLY

fun <!VIPER_TEXT!>anyArgumentReturn<!>(x: Any): Any {
    return x
}

fun <!VIPER_TEXT!>anyCast<!>(x: Int): Any {
    return x
}